--- a/paper/dotaligner.bib
+++ b/paper/dotaligner.bib
@@ -1,12 +1,34 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Martin Smith at 2017-09-05 14:43:14 +1000 
+%% Created for Martin Smith at 2017-09-12 15:55:32 +1000 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{seemann2017identification,
+	Author = {Seemann, Stefan E and Mirza, Aashiq H and Hansen, Claus and Bang-Berthelsen, Claus H and Garde, Christian and Christensen-Dalsgaard, Mikkel and Torarinsson, Elfar and Yao, Zizhen and Workman, Christopher T and Pociot, Flemming and others},
+	Date-Added = {2017-09-12 05:55:22 +0000},
+	Date-Modified = {2017-09-12 05:55:22 +0000},
+	Journal = {Genome Research},
+	Pages = {gr--208652},
+	Publisher = {Cold Spring Harbor Lab},
+	Title = {The identification and functional annotation of RNA structures conserved in vertebrates},
+	Year = {2017}}
+
+@article{will2012locarna,
+	Author = {Will, Sebastian and Joshi, Tejal and Hofacker, Ivo L and Stadler, Peter F and Backofen, Rolf},
+	Date-Added = {2017-09-12 05:54:24 +0000},
+	Date-Modified = {2017-09-12 05:54:24 +0000},
+	Journal = {Rna},
+	Number = {5},
+	Pages = {900--914},
+	Publisher = {Cold Spring Harbor Lab},
+	Title = {LocARNA-P: accurate boundary prediction and improved detection of structural RNAs},
+	Volume = {18},
+	Year = {2012}}
 
 @article{kelley2012transposable,
 	Author = {Kelley, David and Rinn, John},
