--- a/paper/dotaligner.bib
+++ b/paper/dotaligner.bib
@@ -1013,3 +1013,15 @@ data are available at Bioinformatics online.},
 	Volume = {32},
 	Year = {2016},
 	Bdsk-Url-1 = {http://dx.doi.org/10.1093/bioinformatics/btv748}}
+
+@article{Gotoh7166760,
+	author = {Gotoh, O.},
+	title = {An improved algorithm for matching biological sequences.},
+	journal = {J Mol Biol},
+	volume = {162},
+	number = {3},
+	year = {1982},
+	month = {Dec},
+	pages = {705-708},
+	pmid = {7166760}
+}
