--- a/paper/DA.tex
+++ b/paper/DA.tex
@@ -657,7 +657,7 @@ A binary classification matrix was then constructed, where sequences \texttt{x} 
 present a score of 1 if they belong to the same RFAM family, versus a score of 0 if they do not. 
 The similarity matrix resulting from all-vs-all pairwise comparisons with \dotaligner{} was tested for 
 accuracy using the Area Under the Curve AUC of the ROC, as calculated R package \texttt{pROC} \cite{robin2011proc}. 
-A more restricted range of parameter values were then tested on both datasets, where a ranked sum for both datasets of the AUC was performed to determine the default runtime parameters for \dotaligner{}, namely T=10 s=1 k=0.3 t=0.5 o=1 e=0.05 (Supplementary Table 3). \textcolor{blue}{[COMMENT: parameter 's' is the number of examined suboptimal alignments and 'T' is measure of our interest in suboptimal alignments. Hence, s=1 means that just 1 suboptimal alignment (sample) has been examined. This relates to the minor comment of reviewer 2: 'at least make sure to report, how many samples DotAligner generates for computing its alignments.' So, the sampling of Dotaligner is not used at all :/ Second problem: In Suppl Table 3 for example the 1st and 3rd entry have eactly the same numbers in low\_PI AUC and high\_PI AUC -- which makes actually totally sense because the only difference in the parameters is T which is probably totally unused because we are doing ONLY one sample. I'm not sure how to address this BUT this has to be somehow resolved. ANY idea?]} \carna{} version 1.2.5 was run with parameters ``--write-structure --noLP --time-limit=120000'' ;  \locarna{} version 1.7.13 was run with parameter ``--noLP''; \foldalign{} version 2.1.1 was run with and without parameter ``-global''. Default parameters were used for \texttt{pmcomp}, downloaded from \url{https://www.tbi.univie.ac.at/RNA/PMcomp/} and \texttt{RNApaln} version 2.3.5. The custom implementation of Needleman-Wunsch can be found in the GitHub repository associated to this work as well as the benchmark implementation scripts. 
+A more restricted range of parameter values were then tested on both datasets, where a ranked sum for both datasets of the AUC was performed to determine the default runtime parameters for \dotaligner{}, namely T=10 s=1 k=0.3 t=0.5 o=1 e=0.05 (Supplementary Table 3). \textcolor{blue}{[COMMENT: parameter 's' is the number of examined suboptimal alignments and 'T' is measure of our interest in suboptimal alignments. Hence, s=1 means that just 1 suboptimal alignment (sample) has been examined. This relates to the minor comment of reviewer 2: 'at least make sure to report, how many samples DotAligner generates for computing its alignments.' So, the sampling of Dotaligner is not used at all :/ Second problem: In Suppl Table 3 for example the 1st and 3rd entry have eactly the same numbers in low\_PI AUC and high\_PI AUC -- which makes actually totally sense because the only difference in the parameters is T which is probably totally unused because we are doing ONLY one sample. I'm not sure how to address this BUT this has to be somehow resolved. ANY idea?]} \carna{} version 1.2.5 was run with parameters ``--write-structure --noLP --time-limit=120000'' ;  \locarna{} version 1.7.13 was run with parameter ``--noLP''; \foldalign{} version 2.1.1 was run with and without parameter ``-global''. Default parameters were used for \texttt{pmcomp}, downloaded from \url{https://www.tbi.univie.ac.at/RNA/PMcomp/} and \texttt{RNApaln} version 2.3.5. The custom implementation of Needleman-Wunsch can be found in the GitHub repository associated to this work as well as the benchmark implementation scripts. \\
 
 \subsection*{Clustering RNA structures with randomised controls}
 OPTICS benchmarking was performed by stochastically sampling the collection of RFAM 12.0 
@@ -797,11 +797,19 @@ Thanks to Michael Hahsler for developing and disseminating a fast DBSCAN R packa
 %%%%%%%%%       FIGURE 2       %%%%%%%%%% 
 \begin{figure}[h!]
  \includegraphics[width=\textwidth]{fig2}
- \caption {\csentence{Comparison of RNA structure alignment qualities.}  The
- Matthews Correlation Coefficient (\textbf{A}), Structural Conservation Index  
- (\textbf{B}), and \texttt{RNAdistance} calculated topological edit distance 
- (\textbf{C}) are compared between the \rnaalifold{} consensus of the computed 
- alignment and the and reference \bralibase{} alignment consensus.  }
+ \caption {\csentence{  
+ \textcolor{red} {
+ Comparison of RNA structure alignment quality in function of sequence identity.}  
+}
+ \textcolor{red} {
+ \bralibase{} reference RNA structure alignments were submitted to 5 different pairwise alignment algorithms, 
+ including the Needleman-Wunsch sequence-only alignment algorithm. 
+ \textbf{(Top)} The total number of surveyed alignments in function of pairwise sequence identity. The 
+ Matthews Correlation Coefficient, difference in structural Conservation Index,
+ and \texttt{RNAdistance} calculated topological edit distance between 
+the \rnaalifold{} consensus of the computed alignment and the reference \bralibase{} alignment consensus 
+ are compared in the lower 3 plots.  }
+ }
 \end{figure}
 
 
@@ -809,14 +817,18 @@ Thanks to Michael Hahsler for developing and disseminating a fast DBSCAN R packa
 \begin{figure}[h!]
  \includegraphics[width=\textwidth]{fig3}
  \caption {\csentence{Classification of known RNA structures. }
+  \textcolor{red} {
  (\textbf{A}) Receiving Operator Characteristic (ROC) curves measuring the classification
- accuracy by contrasting the computed similarity matrices of each algorithm 
- to a binary classification matrix of RFAM  sequences (1 if same family; 
- 0 if different). High PID =  56-95\% pairwise sequence identity; Low PID  = 1-55\%.
+ accuracy of surveyed algorithms by contrasting their computed similarity matrices 
+ to a binary classification matrix of RFAM  sequences (1 if sequences are in same family; 
+ 0 if different). High PID =  56-95\% pairwise sequence identity from the provided RFAM alignment; Low PID  = 1-55\%.
  (\textbf{B}) Precision-recall curve;  
- (\textbf{C}) Area Under the Curve (AUC) of the ROC values with 95\% confidence intervals; 
- (\textbf{D}) Distribution of computation time (N.B. a fixed upper limit of 120 s was 
- imposed for \carna{}). }
+ (\textbf{C}) Area Under the Curve (AUC) of ROC values with 95\% confidence intervals 
+for the top 4 performing algorithms across 5 ranges of pairwise sequence identity, 
+ as calculated from a variant of the Needleman-Wunsch algorithm with free end gaps. 
+ The 3 replicates correspond to stochastically sampled sequences from RFAM 12.3  (see Supplementary Table 4); 
+ (\textbf{D}) Runtime distribution of single thread computation on a 2.6 GHz AMD Opteron processor 
+ (N.B. a fixed upper limit of 120 s was  imposed for \carna{}). }  }
 \end{figure}
 
 
@@ -846,10 +858,9 @@ An unannotated DKC1-bound sequence is marked with an asterix.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%                               %%
-%% Tables                        %%
-%%                               %%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%                               
+%% Tables                        
+%%                              
 
 %% Use of \listoftables is discouraged.
 %%
@@ -874,19 +885,16 @@ An unannotated DKC1-bound sequence is marked with an asterix.
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%%                               %%
-%% Additional Files              %%
-%%                               %%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-
+%%                               
+%% Additional Files       
+%%                               
 \section*{Additional files}
 
-  \subsection*{Additional file 1 --- Supplementary methods}
+ \subsection*{Additional file 1 --- Supplementary methods}
 
-    Link to GitHub repository, more detailed description of the \dotaligner{} implementation, RNA structure clustering, and eCLIP data processing. 
+ Link to GitHub repository, more detailed description of the \dotaligner{} implementation, RNA structure clustering, and eCLIP data processing. 
 
-  \subsection*{Additional file 2 --- Supplementary tables and figures}
-
+ \subsection*{Additional file 2 --- Supplementary tables and figures}
 
 \end{backmatter}
 
@@ -967,7 +975,8 @@ relative importance of the optimal string alignment. If $T=1$ then we recover th
 'true` probability, if $T\to0$ then $Pr(A;0)=0$ for all alignments with a score
 $W(A)$ less then the score of the optimal string alignment, and if $T\to\infty$ then
 all alignments have the same $Pr(A,\infty)=1/Z(\infty)$.  Hence, $T$ controls
-the search space of suboptimal alignments for step 2. \textcolor{blue}{The algorithm uses the dynamic programming algorithm of Gotoh \cite{Gotoh7166760} which has running time of $O(N^2)$.} 
+the search space of suboptimal alignments for step 2. \textcolor{blue}{
+The algorithm uses the dynamic programming algorithm of Gotoh \cite{Gotoh7166760} which has running time of $O(N^2)$.} 
 The weight function $W(A)$ of
 the probA implementation is changed to explore the ensemble of dot plot
 alignments. We reduce the sequence-structure alignment problem to a
